syntax = "proto3";

package kuma.mesh;

option go_package = "github.com/kumahq/kuma/api/mesh";

import "google/protobuf/descriptor.proto";

message KumaResourceOptions {
  // Name of the Kuma resource struct.
  string name = 1;

  // Name and value of the modelResourceType constant.
  string type = 2;

  // True if this resoure has global scope. Otherwise it will be mesh scope.
  bool global = 3;

  // Name of the resource's Go package.
  string package = 4;

  // Whether to generate a no-op validation function.
  bool skip_validation = 5;

  // Whether to skip type registration for this resource.
  bool skip_registration = 6;

  // ResourceName is the name of the policy for resource name usage in kumactl
  string resource_name = 7;

  // ResourceNamePlural is only to be set if the plural of the resource is
  // irregular (not just adding a 's' at the end).
  string resource_name_plural = 8;

  // IsReadOnly if the resource is read only
  bool is_read_only = 9;

  // SkipWs whether this entity should have api endpoints
  bool skip_ws = 10;

  // WsAdmin whether this entity requires admin auth to access these endpoints
  bool ws_admin = 11;
}

extend google.protobuf.MessageOptions {
  KumaResourceOptions resource = 43534533; // 'kuma'
}
